--- a/site4/first.css
+++ b/site4/first.css
@@ -4,11 +4,18 @@
 	text-align:center;
 	font-size:20px;
 	font-style:italic;
+	background-color: yellow;
+
+}
+body{
+	
+	background-color:rgba(80,199,199,1);
+	
 }
 
 h1:hover
 {
-	color:blue;
+	color:rgb(15, 86, 115);
 }
 /*body {
 	background: linear-gradient(to bottom, rgb(204, 229, 255), rgba(204, 229, 255, 0.4));
@@ -17,7 +24,26 @@ h1:hover
 	font-family: "Lato", sans-serif; */
 }
 
-P.big{
+
+#tittle{
+	color:black;
+}
+
+
+p.big 
+	{
 	color:red;
 	font-style:italic;
+	font-size:1cm;
+	
+}
+
+#taedawa
+{	
+	height:400px;
+	width:70%;
+	/*background:url("https://fpmt.org/wp-content/uploads/teachers/hhdl-draft/20170103_HH_Dalai_Lama_IG5A0401-2_NP.jpg");
+	/*background-repeat:no-repeat;*/
+	/*background-size: cover;*/
+	background: radial-gradient(circle, red 20%, blue 40%,green 30%,black 10%);
 }
