--- a/site4/first.css
+++ b/site4/first.css
@@ -6,6 +6,7 @@
 	font-style:italic;
 	background-color: yellow;
 
+
 }
 body{
 	
@@ -15,7 +16,7 @@ body{
 
 h1:hover
 {
-	color:rgb(15, 86, 115);
+	color:blue;
 }
 /*body {
 	background: linear-gradient(to bottom, rgb(204, 229, 255), rgba(204, 229, 255, 0.4));
@@ -32,9 +33,12 @@ h1:hover
 
 p.big 
 	{
-	color:red;
+	
 	font-style:italic;
-	font-size:1cm;
+	font-size:2em;
+	text-transform:capitalize;
+	font-weight:400;
+
 	
 }
 
@@ -45,5 +49,12 @@ p.big
 	/*background:url("https://fpmt.org/wp-content/uploads/teachers/hhdl-draft/20170103_HH_Dalai_Lama_IG5A0401-2_NP.jpg");
 	/*background-repeat:no-repeat;*/
 	/*background-size: cover;*/
-	background: radial-gradient(circle, red 20%, blue 40%,green 30%,black 10%);
+	background: radial-gradient(circle, red 40%, blue 40%,green 20%);
+}
+
+.mango
+{
+	text-decoration:;
+	text-transform:capitalize;
+	text-align:center;
 }
