--- a/site4/first.css
+++ b/site4/first.css
@@ -37,7 +37,7 @@ p.big
 	
 	font-size:20px;
 	text-transform:capitalize;
-	font-family:"joan",serif;
+	font-family:'Rubik Moonrocks', cursive;
 	
 }
 
@@ -48,7 +48,7 @@ p.big
 	/*background:url("https://fpmt.org/wp-content/uploads/teachers/hhdl-draft/20170103_HH_Dalai_Lama_IG5A0401-2_NP.jpg");
 	/*background-repeat:no-repeat;*/
 	/*background-size: cover;*/
-	background: radial-gradient(circle, red 40%, blue 40%,green 20%);
+	
 }
 
 .mango
@@ -56,4 +56,5 @@ p.big
 	text-decoration:;
 	text-transform:capitalize;
 	text-align:center;
+	font-family:'Rubik Moonrocks', cursive;
 }
